Fixed scrollbar page jumping bug.

--- a/styles/default.css
+++ b/styles/default.css
@@ -25,6 +25,7 @@ html {
   font-size: 20px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  overflow-y: scroll;
 }
 
 body {
